added test cases for Priorities and some changes in test